# LNP_ML

./: Dockerfile  pyproject.toml
data/crossval_splits/small_test_split_with_ultra_held_out_for_in_silico_screen/cv_0/: args.json  test.csv  test_extra_x.csv  test_metadata.csv  test_scores.csv  test_weights.csv  train.csv  train_extra_x.csv  train_metadata.csv  train_weights.csv
data/crossval_splits/small_test_split_with_ultra_held_out_for_in_silico_screen/cv_1/: args.json  test.csv  test_extra_x.csv  test_scores.csv  train.csv  train_extra_x.csv  train_metadata.csv  train_weights.csv  valid_metadata.csv  valid_weights.csv
data/crossval_splits/small_test_split_with_ultra_held_out_for_in_silico_screen/cv_2/: args.json  test.csv  test_extra_x.csv  test_metadata.csv  test_scores.csv  train.csv  train_extra_x.csv  train_metadata.csv  train_weights.csv  valid_weights.csv
data/crossval_splits/small_test_split_with_ultra_held_out_for_in_silico_screen/cv_3/: args.json  test_metadata.csv  test_scores.csv  train.csv  train_extra_x.csv  train_metadata.csv  train_weights.csv  valid.csv  valid_extra_x.csv  valid_weights.csv
data/crossval_splits/small_test_split_with_ultra_held_out_for_in_silico_screen/cv_4/: args.json  test_scores.csv  train.csv  train_extra_x.csv  train_metadata.csv  train_weights.csv  valid.csv  valid_extra_x.csv  valid_metadata.csv  valid_weights.csv
data/crossval_splits/small_test_split_with_ultra_held_out_for_in_silico_screen/ultra_held_out/: test.csv  test_extra_x.csv  test_metadata.csv  test_weights.csv
scripts/: main_script.py  run_commands.py
(+20 files in other folders)
